<resources>
    <string name="app_name">MediCognition</string>
    <string name="WelcomeText">Welcome To MediCognition</string>
    <string name="Continue">Continue</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_login">Already have an account? Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_community">Community</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_menu">More Menu</string>
    <string name="search">Search Here</string>
    <string name="profile">Profile</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>

</resources>