<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/register"
        android:src="@drawable/logo_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCardView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="35sp"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextNameRegister"
                android:autofillHints="Name"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_textbox"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmailRegister"
                android:autofillHints="Email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_textbox"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPasswordRegister"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_textbox"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextConfirmPasswordRegister"
                android:autofillHints="Confirm Password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_textbox"/>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login_here"
                android:padding="15dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>